2009-03-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.2

	* version.cc: Updated to version 1.0.2.

2009-03-11  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* setup.cc: Conditionally delete temporalNegotiator.

	* music/port.hh
	(OutputRedistributionPort::OutputRedistributionPort,
	InputRedistributionPort::InputRedistributionPort): New
	constructors: Initialize spatialNegotiator to NULL pointer.

	* port.cc (OutputRedistributionPort::setupCleanup,
	InputRedistributionPort::setupCleanup): Conditionally delete
	spatialNegotiator.  (It has not been allocated if the port has not
	been mapped.)

	* music/BIFO.hh, music/clock.hh, music/connector.hh,
	music/subconnector.hh, music/synchronizer.hh, music/temporal.hh,
	BIFO.cc, clock.cc, connector.cc, port.cc, runtime.cc,
	subconnector.cc, synchronizer.cc, temporal.cc: Major revision of
	timing logic.  Cont ports can now be connected in loops.

2009-03-09  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* synchronizer.cc (Synchronizer::setMaxDelay (ClockState)): Moved
	decrementing of localTime to Runtime::initialize.
	(Synchronizer::setMaxDelay (ClockState, Clock&)): Use
	Clock::setClockTicks to set startTime. (setMaxDelay may be called
	multiple times.)
	
	* runtime.cc (Runtime::initialize): Decrement localTime one tick
	here.

	* music/temporal.hh, temporal.cc
	(TemporalNegotiator::distributeParameters): New function.

	* collector.cc: Collector shouldn't make assumptions and compute a
	"better" maxBlockSize-value for the buffers.  Instead use
	allowedBuffered as given when configured.

	* connector.cc: Configure compute the actual needed buffer size
	here instead.

	* music/clock.hh, clock.cc (Clock::setClockTicks): New function.

	* BIFO.cc (BFIO::trimBlock): More informative overflow message.

2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* synchronizer.cc, port.cc, music/temporal.hh: Decrement
	maxBuffered at the proper place.  (This fixes a bug where the loop